# Build tools

add_subdirectory(Compress)
add_subdirectory(CRCDiff)
add_subdirectory(DebugWindow)
add_subdirectory(GUIEdit)
add_subdirectory(ImagePacker)
add_subdirectory(ParticleEditor)
add_subdirectory(textureCompress)
add_subdirectory(timingTest)
add_subdirectory(versionUpdate)
add_subdirectory(WorldBuilder)
